--- a/.github/workflows/generate-pacman.yml
+++ b/.github/workflows/generate-pacman.yml
@@ -2,22 +2,38 @@ name: Generate Pacman Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"
-  
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  generate-pacman:
+  generate:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Generate pacman animation
-        uses: ashutosh00710/github-readme-pacman@main
+      - name: Generate pacman SVG
+        uses: lowlighter/metrics@latest
         with:
-          github_user_name: JonasMacielWork
-          branch_name: output
-          commit_message: "chore: update pacman animation"
+          user: JonasMacielWork
+          
+          filename: pacman.svg
+          
+          token: ${{ secrets.GITHUB_TOKEN }}
+          
+          base: ""
+          
+          plugin_pacman: yes
+
+      - name: Push pacman animation to output branch
+        uses: crazy-max/ghaction-github-pages@v4
+        with:
+          build_dir: .
+          
+          pattern: pacman.svg
+          
+          target_branch: output
+          
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
