--- a/.github/workflows/generate-pacman.yml
+++ b/.github/workflows/generate-pacman.yml
@@ -17,13 +17,17 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           user: JonasMacielWork
-          filename: pacman.svg
+          filename: dist/pacman.svg
+          
           token: ${{ secrets.GITHUB_TOKEN }}
           base: header 
           plugin_pacman: yes
+          
       - name: Push pacman animation to output branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
-          build_dir: .
-          pattern: pacman.svg
+          build_dir: dist
           target_branch: output
+          commit_message: "chore: update pacman animation"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
