--- a/.github/workflows/update-wakatime.yml
+++ b/.github/workflows/update-wakatime.yml
@@ -13,13 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: anmol098/waka-readme-stats@master
+      - name: WakaTime Readme Stats
+        uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_PAT }}
-          SHOW_OS: "False"
-          SHOW_PROJECTS: "False"
-          SHOW_EDITORS: "False"
 
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
