--- a/.github/workflows/update-wakatime.yml
+++ b/.github/workflows/update-wakatime.yml
@@ -1,24 +1,28 @@
-name: Waka Readme
+name: WakaTime Stats
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 */4 * * *'
   workflow_dispatch:
 
 jobs:
   update-readme:
     name: Update Readme with WakaTime Stats
     runs-on: ubuntu-latest
-
+    
     steps:
-      - uses: actions/checkout@v4
-
-      - name: WakaTime Readme Stats
-        uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_PAT }}
-
-      - uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "chore: update wakatime stats"
+          
+          SHOW_TITLE: "true"
+          SHOW_UPDATED_DATE: "true"
+          SHOW_TOTAL_CODE_TIME: "true"
+          SHOW_PROFILE_VIEWS: "false"
+          SHOW_DAYS_OF_WEEK: "false"
+          SHOW_PROJECTS: "false"
+          
+          STATS_STYLE: "classic" 
+          
+          LANG_COUNT: "5"
