--- a/.github/workflows/update-wakatime.yml
+++ b/.github/workflows/update-wakatime.yml
@@ -9,20 +9,12 @@ jobs:
   update-readme:
     name: Update Readme with WakaTime Stats
     runs-on: ubuntu-latest
-    
     steps:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_PAT }}
-          
+          BLOCKS: " -> ░▒▓█"
           SHOW_TITLE: "true"
-          SHOW_UPDATED_DATE: "true"
           SHOW_TOTAL_CODE_TIME: "true"
-          SHOW_PROFILE_VIEWS: "false"
-          SHOW_DAYS_OF_WEEK: "false"
-          SHOW_PROJECTS: "false"
-          
-          STATS_STYLE: "classic" 
-          
-          LANG_COUNT: "5"
+          LANG_COUNT: "8"
