--- a/.github/workflows/update-wakatime.yml
+++ b/.github/workflows/update-wakatime.yml
@@ -1,37 +1,33 @@
 name: WakaTime Stats Debug
 
 on:
-  workflow_dispatch: # Deixamos apenas o gatilho manual para facilitar os testes
+  workflow_dispatch:
 
 jobs:
   update-readme:
     name: Update Readme with WakaTime Stats
     runs-on: ubuntu-latest
+
     steps:
-      # Passo 1: Fazer o checkout do repositório
       - name: Check out repository
         uses: actions/checkout@v4
 
-      # Passo 2: Tentar atualizar o README com as estatísticas
+      - name: Ensure README has waka section (manually!)
+        run: |
+          grep -q "<!--START_SECTION:waka-->" README.md || echo "⚠️ README.md precisa da seção <!--START_SECTION:waka-->"
+
       - name: Update README with WakaTime stats
         uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_PAT }}
-          # Forçando a busca em todo o histórico para garantir que haja dados
-          TIME_RANGE: "all_time" 
+          TIME_RANGE: "all_time"
           SHOW_TITLE: "true"
+          TARGET_PATH: "README.md"
+          COMMIT_MESSAGE: "chore: update wakatime stats"
 
-      # --- PASSO DE DEPURAÇÃO CRÍTICO ---
-      # Imprime o conteúdo do README.md no log para vermos se foi modificado
       - name: Display README.md content for debugging
         run: |
           echo "--- START of README.md ---"
           cat README.md
           echo "--- END of README.md ---"
-
-      # Passo 4: Fazer o commit se houver alterações
-      - name: Commit and push if changed
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "chore: update wakatime stats"
